atualizando o controller category para suportar uma categoria mais robusta